@@ -1,0 +1,17 @@
+float_with_at_commands.texi(,2) 
+float_with_at_commands.texi(,3) @setfilename float_with_at_commands.info
+float_with_at_commands.texi(,4) 
+float_with_at_commands.texi(,5) @node Top
+float_with_at_commands.texi(,6) @top Test floats with @@-commands
+float_with_at_commands.texi(,7) 
+float_with_at_commands.texi(,8) @float entr@'ee, premi@`ere entr@'ee
+float_with_at_commands.texi(,9) 
+float_with_at_commands.texi(,10) Ceci est notre premi@`ere entr@'ee.
+float_with_at_commands.texi(,11) @caption{La premi@`ere entr@'ee est importante}
+float_with_at_commands.texi(,12) 
+float_with_at_commands.texi(,13) @end float
+float_with_at_commands.texi(,14) 
+float_with_at_commands.texi(,15) 
+float_with_at_commands.texi(,16) @listoffloats entr@'ee
+float_with_at_commands.texi(,17) 
+float_with_at_commands.texi(,18) @bye
